Finalizado el reto

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -6,12 +6,11 @@ block content
         a.top__link(href="#") #[span.material-icons arrow_back_ios]
         a.top__link(href="#") #[span.material-icons turned_in_not] 
       .bottom
-        p.episode Season 01 &#183; Episode 02
-        h1.title Mr Robot
+        p.bottom__episode Season 01 &#183; Episode 02
+        h1.bottom__title Mr Robot
     section.body
-      p.description Elliot, a brilliant but highly unstable young cyber-security engineer and vigilante hacker, becomes a key figure in a complex game of global dominance when he and his shadowy allies try to take down the corrupt corporation he works for.
+      p.body__description Elliot, a brilliant but highly unstable young cyber-security engineer and vigilante hacker, becomes a key figure in a complex game of global dominance when he and his shadowy allies try to take down the corrupt corporation he works for.
       .reporduction
-        button #[span.material-icons skip_previous]
-        button #[span.material-icons play_circle_filled] 
-        //- play_arrow || play_circle_filled || play_circle
-        button #[span.material-icons skip_next]        
+        button.reporduction__button #[span.material-icons skip_previous]
+        button.reporduction__button.reporduction__button--primary #[span.material-icons play_arrow]        
+        button.reporduction__button #[span.material-icons skip_next]        
