--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@ html {
 body {
   font-size: 1.6rem;
   font-family: "Oswald", sans-serif;
+  color: #141414;
+  background-color: #3a3a3a;
 }
 
 .main-container {
@@ -19,6 +21,115 @@ body {
   height: 800px;
   margin: 0 auto;
   background-color: bisque;
+  border-radius: 2rem;
+  overflow: hidden;
+  display: grid;
+  grid-template-rows: 60% 40%;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url("../images/main.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.top {
+  padding: 1.5rem 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background: linear-gradient(180deg, #141414 0%, rgba(0, 0, 0, 0) 100%);
+}
+.top__link {
+  color: #f5f5f5;
+}
+.top__link:hover {
+  color: #cc1800;
+}
+
+.bottom {
+  width: 100%;
+  padding: 1rem 2rem 0.5rem;
+  color: #f5f5f5;
+  text-align: center;
+  background: linear-gradient(0deg, #141414 0%, rgba(0, 0, 0, 0) 100%);
+}
+.bottom__episode {
+  padding-block: 0.2rem;
+  font-weight: 200;
+  border: 1px solid #cc1800;
+}
+.bottom__title {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 5rem;
+  color: #cc1800;
+}
+
+.body {
+  display: grid;
+  grid-template-rows: 60% 40%;
+  background-color: #141414;
+  color: #f5f5f5;
+}
+.body__description {
+  align-self: center;
+  margin-inline: 3rem;
+  font-size: 1.8rem;
+  font-weight: 200;
+  text-align: justify;
+}
+
+.reporduction {
+  align-self: flex-start;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2.5rem;
+}
+.reporduction__button {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 3rem;
+  border: 1px solid #3a3a3a;
+  background-color: transparent;
+  color: #3a3a3a;
+  cursor: pointer;
+}
+.reporduction__button span {
+  font-size: 3rem;
+}
+.reporduction__button:hover {
+  border: 2px solid #f5f5f5;
+  color: #f5f5f5;
+}
+.reporduction__button:active span {
+  font-size: 2.5rem;
+}
+.reporduction__button--primary {
+  width: 8rem;
+  height: 8rem;
+  border-radius: 4rem;
+  border: 3px solid #cc1800;
+  color: #cc1800;
+}
+.reporduction__button--primary span {
+  font-size: 5rem;
+}
+.reporduction__button--primary:hover {
+  border: 4px solid #cc1800;
+  color: #cc1800;
+}
+.reporduction__button--primary:hover span {
+  font-size: 5.5rem;
+}
+.reporduction__button--primary:active span {
+  font-size: 4.5rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
