--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,15 @@
+// Colors
+$color-black: #141414;
+$color-background: #3a3a3a;
+$color-white: #f5f5f5;
+$color-red: #cc1800;
+
+// Font weight
+$light: 200;
+$regular: 400;
+$bold: 600;
+
+
 html {
   font-size: 62.5%;
 }
@@ -11,6 +23,8 @@ html {
 body {
   font-size: 1.6rem;
   font-family: 'Oswald', sans-serif;
+  color: $color-black;
+  background-color: $color-background;
 }
 
 .main-container {
@@ -19,4 +33,128 @@ body {
   height: 800px;
   margin: 0 auto;
   background-color: bisque;
+  border-radius: 2rem;
+  overflow: hidden;
+  display: grid;
+  grid-template-rows: 60% 40%
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url("../images/main.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.top {
+  padding: 1.5rem 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background: linear-gradient(180deg, $color-black 0%, rgba(0,0,0,0) 100%);
+
+  &__link {
+    color: $color-white;
+
+    &:hover {
+      color: $color-red;
+    }
+  }
+}
+
+.bottom {
+  width: 100%;
+  padding: 1rem 2rem 0.5rem;
+  color: $color-white;
+  text-align: center;
+  background: linear-gradient(0deg, $color-black 0%, rgba(0,0,0,0) 100%);
+  
+  &__episode {
+    padding-block: 0.2rem;
+    font-weight: $light;
+    border: 1px solid $color-red;
+  }
+  &__title {
+    text-transform: uppercase;
+    font-weight: $bold;
+    font-size: 5rem;
+    color: $color-red;
+  }
+}
+
+.body {
+  display: grid;
+  grid-template-rows: 60% 40%;  
+  background-color: $color-black;
+  color: $color-white;
+
+  &__description {
+    align-self: center;
+    margin-inline: 3rem;
+    font-size: 1.8rem;
+    font-weight: $light;
+    text-align: justify;
+  }
+}
+
+.reporduction {
+  align-self: flex-start;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2.5rem;
+
+  &__button {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 3rem;
+    border: 1px solid $color-background;
+    background-color: transparent;    
+    color: $color-background;
+    cursor: pointer;
+
+    & span {
+      font-size: 3rem;      
+    }
+
+    &:hover {
+      border: 2px solid $color-white;
+      color: $color-white;
+    }
+    
+    &:active {
+      span {
+        font-size: 2.5rem;
+      }
+    }
+
+    &--primary {
+      width: 8rem;
+      height: 8rem;
+      border-radius: 4rem;
+      border: 3px solid $color-red;
+      color: $color-red;
+      
+      & span {
+        font-size: 5rem;
+      }
+      
+      &:hover {
+        border: 4px solid $color-red;
+        color: $color-red;
+        & span {
+          font-size: 5.5rem;          
+        }
+      }
+      
+      &:active {
+        span {
+          font-size: 4.5rem;
+        }
+      }
+    }
+  }
 }
