--- a/neumorphismControl/pug/index.pug
+++ b/neumorphismControl/pug/index.pug
@@ -1,4 +1,21 @@
 extends template.pug 
 
 block content
-  //- TODO
+  main.control 
+    section.keyPad
+      button.keyPad__btn ON
+      button.keyPad__btn MC
+      button.keyPad__btn VU
+      button.keyPad__btn UP
+      button.keyPad__btn VD
+      button.keyPad__btn DW
+      button.keyPad__btn MN
+      button.keyPad__btn BK
+    section.bottom
+      section.status
+        .status__mark .
+        .status__mark .
+        .status__mark .
+        .status__mark .
+        .status__mark .
+      p.brand PikyR
