--- a/neumorphismControl/scss/styles.scss
+++ b/neumorphismControl/scss/styles.scss
@@ -1,1 +1,41 @@
 @import "./global";
+
+.control {  
+  height: 600px;
+  width: 220px;
+  margin: 40px auto;
+  padding: 6px;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  background-color: $color-control;
+  border-radius: 12px;
+}
+
+.keyPad {
+  padding: 2px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 100px;
+  gap: 2px;
+  
+  background-color: $color-dark;
+  border-radius: 8px;
+
+  &__btn {
+    border-radius: 7px;
+    border: none;
+  }
+}
+
+.bottom {  
+  margin: 60px 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.status {
+  display: flex;
+  justify-content: center;
+}
