--- a/neumorphismControl/css/styles.css
+++ b/neumorphismControl/css/styles.css
@@ -12,4 +12,42 @@ body {
   background-color: #dfded0;
 }
 
+.control {
+  height: 600px;
+  width: 220px;
+  margin: 40px auto;
+  padding: 6px;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  background-color: #e4e4e4;
+  border-radius: 12px;
+}
+
+.keyPad {
+  padding: 2px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 100px;
+  gap: 2px;
+  background-color: #454545;
+  border-radius: 8px;
+}
+.keyPad__btn {
+  border-radius: 7px;
+  border: none;
+}
+
+.bottom {
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.status {
+  display: flex;
+  justify-content: center;
+}
+
 /*# sourceMappingURL=styles.css.map */
