Agregados los estilos a los botones base

--- a/neumorphismControl/pug/index.pug
+++ b/neumorphismControl/pug/index.pug
@@ -18,4 +18,4 @@ block content
         .status__mark .
         .status__mark .
         .status__mark .
-      p.brand PikyR
+      p.brand #[b Pky]Rms
