--- a/neumorphismControl/css/styles.css
+++ b/neumorphismControl/css/styles.css
@@ -1,17 +1,63 @@
-/* Error: expected "{".
- *    ,
- * 37 |   display: flex;
- *    |                ^
- *    '
- *   scss/styles.scss 37:16  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: expected "{".\a    \2577 \a 37 \2502    display: flex;\a    \2502                 ^\a    \2575 \a   scss/styles.scss 37:16  root stylesheet';
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  background-color: #d3d3d3;
+  font-family: "Montserrat", sans-serif;
+  color: #d3d3d3;
+}
+
+.control {
+  height: 600px;
+  width: 220px;
+  margin: 10px auto;
+  padding: 6px;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  background-color: #ececec;
+  border-radius: 12px;
+  border-top: solid 1px #f0f0f0;
+  border-left: solid 1px #f0f0f0;
+  border-right: solid 1px #e0e0e0;
+  border-bottom: solid 1px #e0e0e0;
+  box-shadow: rgba(0, 0, 0, 0.09) 2px 2px 1px, rgba(0, 0, 0, 0.09) 4px 4px 2px, rgba(0, 0, 0, 0.09) 8px 8px 4px, rgba(0, 0, 0, 0.09) 12px 16px 8px, rgba(0, 0, 0, 0.09) 24px 32px 16px;
+}
+
+.keyPad {
+  padding: 2px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 100px;
+  gap: 2px;
+  background-color: #454545;
+  border-radius: 8px;
+}
+.keyPad__btn {
+  border-radius: 7px;
+  border: none;
+  color: #919095;
+  box-shadow: white 2px 2px 2px 0px inset, #e0e0e0 -2px -2px 1px 0px inset;
+}
+
+.bottom {
+  margin: 60px 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.status {
+  display: flex;
+  justify-content: center;
+}
+
+/*# sourceMappingURL=styles.css.map */
