--- a/neumorphismControl/scss/_global.scss
+++ b/neumorphismControl/scss/_global.scss
@@ -1,12 +1,20 @@
-$color-background: #dfded0;
-$color-control: #e4e4e4;
-// $color-shadow-light: #e4e4e4;
-// $color-shadow-dark: #e4e4e4;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap');
 
-$color-active: #51f7fe;
+$color-control: #ececec;
+$color-background: #d3d3d3;
+$color-font-secondary: #d3d3d3;
+$color-font-primary: #919095;
 $color-dark: #454545;
+$color-active: #51f7fe;
+
+$color-grey: #f0f0f0;
+$color-grey-2: #e0e0e0;
+
+// $color-shadow-light: # e4e4e4;
+// $color-shadow-dark: # e4e4e4;
 
 
+$font-primary: 'Montserrat', sans-serif;
 
 * {
   margin: 0;
@@ -19,5 +27,7 @@ html {
 }
 
 body {
-  // background-color: $color-background;
+  background-color: $color-background;
+  font-family: $font-primary;
+  color: $color-font-secondary;
 }
