--- a/neumorphismControl/pug/template.pug
+++ b/neumorphismControl/pug/template.pug
@@ -6,5 +6,7 @@ html(lang="es")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Neumorfismo | Curso de Diseño Web con CSS Grid y Flexbox
     link(rel="stylesheet", href="css/styles.css")
+
+    link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
   body
     block content
