--- a/neumorphismControl/css/styles.css
+++ b/neumorphismControl/css/styles.css
@@ -28,7 +28,7 @@ body {
   border-left: solid 1px #f0f0f0;
   border-right: solid 1px #e0e0e0;
   border-bottom: solid 1px #e0e0e0;
-  box-shadow: rgba(0, 0, 0, 0.09) 2px 2px 1px, rgba(0, 0, 0, 0.09) 4px 4px 2px, rgba(0, 0, 0, 0.09) 8px 8px 4px, rgba(0, 0, 0, 0.09) 12px 16px 8px, rgba(0, 0, 0, 0.09) 24px 32px 16px;
+  box-shadow: rgba(0, 0, 0, 0.09) 2px 2px 8px, rgba(0, 0, 0, 0.09) 4px 4px 8px, rgba(0, 0, 0, 0.09) 8px 8px 8px, rgba(0, 0, 0, 0.09) 16px 16px 8px, rgba(0, 0, 0, 0.09) 32px 32px 16px;
 }
 
 .keyPad {
@@ -41,10 +41,32 @@ body {
   border-radius: 8px;
 }
 .keyPad__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 7px;
-  border: none;
-  color: #919095;
+  background-color: #ececec;
   box-shadow: white 2px 2px 2px 0px inset, #e0e0e0 -2px -2px 1px 0px inset;
+}
+.keyPad__neu {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 30px;
+  background-color: inherit;
+  color: #919095;
+  font-size: 1rem;
+  font-weight: 300;
+  box-shadow: 8px 8px 20px #b7b7b7, -8px -8px 10px #ffffff, 1px 1px 1px 0px #ffffff inset, -2px -2px 1px 0px #e0e0e0 inset;
+}
+.keyPad__neu--active {
+  color: #fd6f50;
+}
+.keyPad__neu span {
+  font-size: 3rem;
 }
 
 .bottom {
@@ -58,6 +80,16 @@ body {
 .status {
   display: flex;
   justify-content: center;
+  gap: 15px;
+}
+.status__mark {
+  width: 7px;
+  height: 7px;
+  background-color: #454545;
+  border-radius: 4px;
+}
+.status__mark--active {
+  background-color: #51f7fe;
 }
 
 /*# sourceMappingURL=styles.css.map */
