--- a/neumorphismControl/scss/styles.scss
+++ b/neumorphismControl/scss/styles.scss
@@ -16,11 +16,11 @@
   border-bottom: solid 1px $color-grey-2;
 
   box-shadow: 
-    rgba(0, 0, 0, 0.09) 2px 2px 1px, 
-    rgba(0, 0, 0, 0.09) 4px 4px 2px, 
-    rgba(0, 0, 0, 0.09) 8px 8px 4px, 
-    rgba(0, 0, 0, 0.09) 12px 16px 8px, 
-    rgba(0, 0, 0, 0.09) 24px 32px 16px
+    rgba(0, 0, 0, 0.09) 2px 2px 8px, 
+    rgba(0, 0, 0, 0.09) 4px 4px 8px, 
+    rgba(0, 0, 0, 0.09) 8px 8px 8px, 
+    rgba(0, 0, 0, 0.09) 16px 16px 8px, 
+    rgba(0, 0, 0, 0.09) 32px 32px 16px    
   ;
 }
 
@@ -36,15 +36,45 @@
 
   
   &__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 7px;
-    border: none;
-    color: $color-font-primary;
-
+    background-color: $color-control;
     box-shadow: 
       white 2px 2px 2px 0px inset,
       $color-grey-2 -2px -2px 1px 0px inset
     ;
-      
+  }
+  
+  &__neu {
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 30px;
+    background-color: inherit;
+    color: $color-font-primary;
+
+    font-size: 1rem;
+    font-weight: 300;
+
+    box-shadow:
+      8px 8px 20px #b7b7b7,
+      -8px -8px 10px #ffffff,
+      1px 1px 1px 0px #ffffff inset,
+      -2px -2px 1px 0px $color-grey-2 inset,
+    ;
+
+    &--active {
+      color: #fd6f50;
+    }
+
+    & span {
+      font-size: 3rem;
+    }
   }
 }
 
@@ -59,4 +89,16 @@
 .status {
   display: flex;
   justify-content: center;
+  gap: 15px;
+
+  &__mark {
+    width: 7px;
+    height: 7px;
+    background-color: $color-dark;
+    border-radius: 4px;
+    
+    &--active {
+      background-color: $color-active;
+    }
+  }
 }
