--- a/neumorphismControl/scss/styles.scss
+++ b/neumorphismControl/scss/styles.scss
@@ -9,19 +9,22 @@
   grid-template-rows: auto 1fr;
   background-color: $color-control;
   border-radius: 12px;
-
-  border-top: solid 1px $color-grey;
-  border-left: solid 1px $color-grey;
-  border-right: solid 1px $color-grey-2;
-  border-bottom: solid 1px $color-grey-2;
-
-  box-shadow: 
-    rgba(0, 0, 0, 0.09) 2px 2px 8px, 
-    rgba(0, 0, 0, 0.09) 4px 4px 8px, 
-    rgba(0, 0, 0, 0.09) 8px 8px 8px, 
-    rgba(0, 0, 0, 0.09) 16px 16px 8px, 
-    rgba(0, 0, 0, 0.09) 32px 32px 16px    
+  
+  box-shadow:
+    2px 2px 1.6px rgba(0, 0, 0, 0.065),
+    4.4px 4.4px 3.6px rgba(0, 0, 0, 0.094),
+    7.6px 7.7px 6.1px rgba(0, 0, 0, 0.109),
+    12.5px 12.6px 9.7px rgba(0, 0, 0, 0.115),
+    21px 21.2px 15.7px rgba(0, 0, 0, 0.116),
+    38.8px 39.2px 27.3px rgba(0, 0, 0, 0.114),
+    91px 92px 76px rgba(0, 0, 0, 0.11),
+    white 2px 2px 2px 0px inset,
+    $color-grey-2 -2px -2px 1px 0px inset
   ;
+
+
+
+   
 }
 
 .keyPad {
@@ -74,6 +77,19 @@
 
     & span {
       font-size: 3rem;
+    }
+
+    &:active {
+      font-size: 0.97rem;
+      box-shadow:
+        inset 2px 2px 10px #bebebe,
+        inset -2px -2px 10px #ffffff,
+        4px 4px 10px #ffffff,
+        -4px -4px 10px #cfcfcf
+      ;
+      & span {
+        font-size: 2.92rem;
+      }
     }
   }
 }
