--- a/neumorphismControl/scss/_global.scss
+++ b/neumorphismControl/scss/_global.scss
@@ -2,17 +2,13 @@
 
 $color-control: #ececec;
 $color-background: #d3d3d3;
-$color-font-secondary: #d3d3d3;
+$color-font-secondary: #c7c7c7;
 $color-font-primary: #919095;
 $color-dark: #454545;
 $color-active: #51f7fe;
 
 $color-grey: #f0f0f0;
 $color-grey-2: #e0e0e0;
-
-// $color-shadow-light: # e4e4e4;
-// $color-shadow-dark: # e4e4e4;
-
 
 $font-primary: 'Montserrat', sans-serif;
 
