--- a/neumorphismControl/pug/template.pug
+++ b/neumorphismControl/pug/template.pug
@@ -1,6 +1,7 @@
 doctype html
 html(lang="es")
   head
+    meta(name="theme-color" content="#d3d3d3")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
